# firecore-engine

./: Cargo.toml  README.md  TODO.md
crates/audio/: Cargo.toml  README.md
crates/audio/src/: lib.rs  music.rs  serialized.rs  sound.rs
crates/battle-gui/: Cargo.toml
crates/battle-gui/examples/: test.rs
crates/battle-gui/src/: action.rs  context.rs  lib.rs  transition.rs  ui.rs  view.rs
crates/battle-gui/src/transition/: trainer.rs
crates/battle-gui/src/transition/introduction/: basic.rs  mod.rs  trainer.rs
crates/battle-gui/src/transition/opener/: manager.rs  mod.rs  trainer.rs  wild.rs
crates/battle-gui/src/ui/: background.rs  exp_bar.rs  text.rs  view.rs
crates/battle-gui/src/ui/panels/: battle.rs  fight.rs  level.rs  mod.rs  move_info.rs  moves.rs  target.rs
crates/battle-gui/src/ui/pokemon/: faint.rs  flicker.rs  mod.rs  spawner.rs  status.rs
crates/engine/: Cargo.toml
crates/engine/examples/: test.rs
crates/engine/src/: controls.rs  lib.rs
crates/engine/src/controls/: gamepad.rs
crates/pokedex-engine/: Cargo.toml
crates/pokedex-engine/builder/: Cargo.toml
crates/pokedex-engine/builder/src/: item.rs  npc_group.rs  pokemon.rs
crates/pokedex-engine/src/: context.rs  data.rs  gui.rs  lib.rs  texture.rs
crates/pokedex-engine/src/battle_move/: script.rs
crates/pokedex-engine/src/gui/: bag.rs  health.rs  party.rs  pokemon.rs
crates/pokedex-engine/src/gui/party/: cell.rs  select.rs  summary.rs
crates/text/: Cargo.toml
examples/: test.rs  text.rs
src/: audio.rs  context.rs  error.rs  font.rs  fs.rs  graphics.rs  lib.rs  math.rs  state.rs  text.rs  util.rs  utils.rs
src/audio/: error.rs  mod.rs  music.rs  sound.rs
src/audio/backend/: mod.rs  music.rs  sound.rs
src/audio/backend/tetra/: context.rs  music.rs  sound.rs
src/context/: audio.rs
src/graphics/: color.rs  context.rs  image.rs  scaling.rs  shapes.rs  text.rs  texture.rs  window.rs
src/graphics/text/: font.rs  renderer.rs
src/gui/: bar.rs  mod.rs  panel.rs  text.rs
src/input/: controller.rs  controls.rs  gamepad.rs  keyboard.rs  mod.rs  mouse.rs
src/input/controls/: controller.rs  gamepad.rs  keyboard.rs  touchscreen.rs
