[package]
name = "firecore-engine"
description = "Base engine for my games"
version = "0.0.3"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/fiirecore/engine"
readme = "README.md"

[features]
default = []
audio = ["macroquad/audio"]

[dependencies]

# Underlying engine

macroquad = { version = "0.3", git = "https://github.com/DoNotDoughnut/macroquad", rev = "236d84b", default-features = false }
quad-gamepad = "0.2.0-alpha"

#

image = { version = "0.23.14", default-features = false, features = [
    "png",
    "tga",
] }

# Controls 

enum-map = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

# Audio utils

tinystr = { version = "0.4", features = ["serde"], default-features = false }

# Text rendering

firecore-font-builder = { git = "https://github.com/fiirecore-game/firecore-font-builder", rev = "057373a", default-features = false }

[dev-dependencies]
bincode = "1.3"

[workspace]
members = ["crates/*", "crates/pokedex-engine/builder"]
default-members = ["crates/*"]
