[package]
name = "fiirengine"
description = "Base engine for my games"
version = "0.0.3"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2021"
license = "CC0"
repository = "https://github.com/fiirecore/engine"
readme = "README.md"

[features]
default = ["audio", "gamepad"]
audio = ["macroquad/audio"]
gamepad = ["gilrs"]

[dependencies]
macroquad = { version = "0.3", git = "https://github.com/DoNotDoughnut/macroquad", rev = "236d84b", default-features = false }
image = { version = "0.23", default-features = false, features = [
    "png",
    "tga",
] }

[target.'cfg(not(target = "wasm32"))'.dependencies]
gilrs = { version = "0.8", features = ["serde"], optional = true }
